Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17475

After doing a multi line selection and then scrolling so it is no longer visible, then clicking on a line will jump to another line

    XMLWordPrintable

Details

    • e7ffd1eefc86aa666348ae4f9c107923314a65fe

    Description

      After doing a multi line selection and then scrolling so it is no longer visible, then clicking on a line will jump to another line. To reproduce do:

      • Click ALT and drag the mouse to select more than one set of lines in a file.
      • Scroll so the selection is no longer visible
      • Click on a line and observe the cursor moving to another line other than the one clicked.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-17475
        # Subject Branch Project Status CR V

        Activity

          People

            davschul David Schulz
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes