Editor: Avoid setting text cursor when clearing block selection

Task-number: QTCREATORBUG-17475
Change-Id: I0266530c8c2ba10bd14dcb26b946cc51a825600f
Reviewed-by: Eike Ziller <eike.ziller@qt.io>